--- a/templates/base.html
+++ b/templates/base.html
@@ -412,6 +412,10 @@
                                 <span class="badge bg-light text-dark ms-1">{{ current_user.role }}</span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{{ url_for('auth.profile') }}">
+                                    <i class="bi bi-person"></i> Profile
+                                </a></li>
+                                <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                                     <i class="bi bi-box-arrow-right"></i> Logout
                                 </a></li>
